--- a/src-ap-vb3/doc/src-ap-vb3.dita
+++ b/src-ap-vb3/doc/src-ap-vb3.dita
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "technicalContent/dtd/reference.dtd">
-<reference id="EA_Model16x34x05x02x00" xml:lang="en">
+<reference id="EA_Model15x34x51x02x00" xml:lang="en">
 	<title>Application profile</title>
 	<refbody>
 		<section>
@@ -72,16 +72,10 @@
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:​type</entry>
+							<entry colname="1">dct:type</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">1..1</entry>
 							<entry colname="4">Specify the context where a specified notation is considered unique. </entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">skos:​notation</entry>
-							<entry colname="2">euvoc:​XlNotation</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A notation is a string of characters such as "T58.5" or "303.4833" used to uniquely identify a concept within the scope of a given concept scheme or within a specified context.</entry>
 						</row>
 					</tbody>
 				</tgroup>
@@ -148,42 +142,6 @@
 								<p>The literal form of the note.</p>
 							</entry>
 						</row>
-						<row rowsep="1">
-							<entry colname="1">skos:​definition</entry>
-							<entry colname="2">euvoc:​XlNote</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A statement or formal explanation of the meaning of a concept.</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">skos:​historyNote</entry>
-							<entry colname="2">euvoc:​XlNote</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A note about the past state/use/meaning of a concept.</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">skos:​example</entry>
-							<entry colname="2">euvoc:​XlNote</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">An example of the use of a concept.</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">skos:​changeNote</entry>
-							<entry colname="2">euvoc:​XlNote</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A note about a modification to a concept.</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">skos:​editorialNote</entry>
-							<entry colname="2">euvoc:​XlNote</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A note for an editor, translator or maintainer of the vocabulary.</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">skos:​scopeNote</entry>
-							<entry colname="2">euvoc:​XlNote</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A note that helps to clarify the meaning of a concept.</entry>
-						</row>
 					</tbody>
 				</tgroup>
 			</table>
@@ -227,110 +185,22 @@
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​member</entry>
+							<entry colname="1">skos:member</entry>
 							<entry colname="2">skos:​Collection</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">Member of the collection. </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​member</entry>
+							<entry colname="1">skos:member</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">Member of the collection. </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:​prefLabel</entry>
+							<entry colname="1">skosxl:prefLabel</entry>
 							<entry colname="2">skosxl:​Label</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">The preferred lexical label for a resource, in a given language. </entry>
-						</row>
-					</tbody>
-				</tgroup>
-			</table>
-		</section>
-		<section>
-			<title>skos:ConceptScheme</title>
-			<p>A SKOS concept scheme can be viewed as an aggregation of one or more SKOS concepts. Semantic relationships (links) between those concepts may also be viewed as part of a concept scheme. This definition is, however, meant to be suggestive rather than restrictive, and there is some flexibility in the formal data model stated below.</p>
-			<p>Thesauri, classification schemes, subject heading lists, taxonomies, 'folksonomies', and other types of controlled vocabulary are all examples of concept schemes. Concept schemes are also embedded in glossaries and terminologies. </p>
-			<table frame="all" colsep="1" rowsep="1" scale="70">
-				<title>Properties</title>
-				<tgroup cols="4" colsep="1" rowsep="1" outputclass="FormatA">
-					<colspec colnum="1" colname="1" colwidth="22*"/>
-					<colspec colnum="2" colname="2" colwidth="12*"/>
-					<colspec colnum="3" colname="3" colwidth="10*"/>
-					<colspec colnum="4" colname="4" colwidth="56*"/>
-					<thead>
-						<row rowsep="1">
-							<entry colname="1">Name</entry>
-							<entry colname="2">Type</entry>
-							<entry colname="3">Cardinality</entry>
-							<entry colname="4">Definition</entry>
-						</row>
-					</thead>
-					<tbody>
-						<row rowsep="1">
-							<entry colname="1">dct:​created</entry>
-							<entry colname="2">xsd:​date</entry>
-							<entry colname="3">0..1</entry>
-							<entry colname="4">
-								<p>Date of creation of the resource.</p>
-							</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">dct:​identifier</entry>
-							<entry colname="2">rdfs:​Literal</entry>
-							<entry colname="3">0..1</entry>
-							<entry colname="4">
-								<p>An unambiguous reference to the resource within a given context.</p>
-								<p>Recommended best practice is to identify the resource by means of a string conforming to a formal identification system.</p>
-							</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">dct:​modified</entry>
-							<entry colname="2">xsd:​date</entry>
-							<entry colname="3">0..1</entry>
-							<entry colname="4">
-								<p>Date of modification of the resource.</p>
-							</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">owl:​versionInfo</entry>
-							<entry colname="2">rdfs:​Literal</entry>
-							<entry colname="3">0..1</entry>
-							<entry colname="4">
-								<p>An owl:versionInfo statement generally has as its object a string giving information about this version. This statement does not contribute to the logical meaning of the resource.</p>
-							</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">euvoc:​domain</entry>
-							<entry colname="2">skos:​Concept</entry>
-							<entry colname="3">0..1</entry>
-							<entry colname="4">Indicates the subject of the controlled vocabulary. 
-This property has a similar function as the dct:subject and dcat:theme. </entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">dct:​isPartOf</entry>
-							<entry colname="2">skos:​ConceptScheme</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">A related resource in which the described resource is physically or logically included.</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">skosxl:​prefLabel</entry>
-							<entry colname="2">skosxl:​Label</entry>
-							<entry colname="3">1..*</entry>
-							<entry colname="4">The preferred lexical label for a resource, in a given language. </entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">skos:​inScheme</entry>
-							<entry colname="2">skos:​ConceptScheme</entry>
-							<entry colname="3">1..*</entry>
-							<entry colname="4">A concept scheme in which the concept is included. A concept may be a member of more than one concept scheme.</entry>
-						</row>
-						<row rowsep="1">
-							<entry colname="1">skos:​topConceptOf</entry>
-							<entry colname="2">skos:​ConceptScheme</entry>
-							<entry colname="3">0..*</entry>
-							<entry colname="4">The property skos:hasTopConcept is, by convention, used to link a concept scheme to the SKOS concept(s) which are topmost in the hierarchical relations for that scheme.</entry>
 						</row>
 					</tbody>
 				</tgroup>
@@ -431,81 +301,204 @@ This property has a similar function as the dct:subject and dcat:theme. </entry>
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​broadMatch</entry>
+							<entry colname="1">skos:inScheme</entry>
+							<entry colname="2">skos:​ConceptScheme</entry>
+							<entry colname="3">1..*</entry>
+							<entry colname="4">A concept scheme in which the concept is included. A concept may be a member of more than one concept scheme.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">skos:definition</entry>
+							<entry colname="2">euvoc:​XlNote</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A statement or formal explanation of the meaning of a concept.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">skos:broadMatch</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">An upwards hierarchical mapping link between two concepts.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​narrowMatch</entry>
+							<entry colname="1">skos:historyNote</entry>
+							<entry colname="2">euvoc:​XlNote</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A note about the past state/use/meaning of a concept.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">skos:narrowMatch</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A downwards hierarchical mapping link between two concepts.
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​broader</entry>
+							<entry colname="1">skos:broader</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept that is more general in meaning.
 Broader concepts are typically rendered as parents in a concept hierarchy (tree).</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:​isReplacedBy</entry>
+							<entry colname="1">skos:example</entry>
+							<entry colname="2">euvoc:​XlNote</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">An example of the use of a concept.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">dct:isReplacedBy</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource that supplants, displaces, or supersedes the described resource. 
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​exactMatch</entry>
+							<entry colname="1">skos:exactMatch</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:exactMatch is used to link two concepts, indicating a high degree of confidence that the concepts can be used interchangeably across a wide range of information retrieval applications. skos:exactMatch is a transitive property, and is a sub-property of skos:closeMatch.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​closeMatch</entry>
+							<entry colname="1">skos:closeMatch</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:closeMatch is used to link two concepts that are sufficiently similar that they can be used interchangeably in some information retrieval applications. In order to avoid the possibility of "compound errors" when combining mappings across more than two concept schemes, skos:closeMatch is not declared to be a transitive property.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​relatedMatch</entry>
+							<entry colname="1">skos:relatedMatch</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:relatedMatch is used to state an associative mapping link between two concepts.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:​altLabel</entry>
+							<entry colname="1">skosxl:altLabel</entry>
 							<entry colname="2">skosxl:​Label</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">An alternative lexical label for a resource. Acronyms, abbreviations, spelling variants, and irregular plural/singular forms may be included among the alternative labels for a concept. </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:​hiddenLabel</entry>
+							<entry colname="1">skosxl:hiddenLabel</entry>
 							<entry colname="2">skosxl:​Label</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A lexical label for a resource that should be hidden when generating visual displays of the resource, but should still be accessible to free text search operations. Mis-spelled terms are normally included as hidden labels.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:​prefLabel</entry>
+							<entry colname="1">skos:topConceptOf</entry>
+							<entry colname="2">skos:​ConceptScheme</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">The property skos:hasTopConcept is, by convention, used to link a concept scheme to the SKOS concept(s) which are topmost in the hierarchical relations for that scheme.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">skosxl:prefLabel</entry>
 							<entry colname="2">skosxl:​Label</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">The preferred lexical label for a resource, in a given language. No two concepts in the same concept scheme may have the same preferred label in a given language. 
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:​related</entry>
+							<entry colname="1">skos:notation</entry>
+							<entry colname="2">euvoc:​XlNotation</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A notation is a string of characters such as "T58.5" or "303.4833" used to uniquely identify a concept within the scope of a given concept scheme or within a specified context.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">skos:related</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept with which there is an associative semantic relationship.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:​type</entry>
+							<entry colname="1">skos:changeNote</entry>
+							<entry colname="2">euvoc:​XlNote</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A note about a modification to a concept.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">skos:editorialNote</entry>
+							<entry colname="2">euvoc:​XlNote</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A note for an editor, translator or maintainer of the vocabulary.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">skos:scopeNote</entry>
+							<entry colname="2">euvoc:​XlNote</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A note that helps to clarify the meaning of a concept.</entry>
+						</row>
+					</tbody>
+				</tgroup>
+			</table>
+		</section>
+		<section>
+			<title>skos:ConceptScheme</title>
+			<p>A SKOS concept scheme can be viewed as an aggregation of one or more SKOS concepts. Semantic relationships (links) between those concepts may also be viewed as part of a concept scheme. This definition is, however, meant to be suggestive rather than restrictive, and there is some flexibility in the formal data model stated below.</p>
+			<p>Thesauri, classification schemes, subject heading lists, taxonomies, 'folksonomies', and other types of controlled vocabulary are all examples of concept schemes. Concept schemes are also embedded in glossaries and terminologies. </p>
+			<table frame="all" colsep="1" rowsep="1" scale="70">
+				<title>Properties</title>
+				<tgroup cols="4" colsep="1" rowsep="1" outputclass="FormatA">
+					<colspec colnum="1" colname="1" colwidth="22*"/>
+					<colspec colnum="2" colname="2" colwidth="12*"/>
+					<colspec colnum="3" colname="3" colwidth="10*"/>
+					<colspec colnum="4" colname="4" colwidth="56*"/>
+					<thead>
+						<row rowsep="1">
+							<entry colname="1">Name</entry>
+							<entry colname="2">Type</entry>
+							<entry colname="3">Cardinality</entry>
+							<entry colname="4">Definition</entry>
+						</row>
+					</thead>
+					<tbody>
+						<row rowsep="1">
+							<entry colname="1">dct:​created</entry>
+							<entry colname="2">xsd:​date</entry>
+							<entry colname="3">0..1</entry>
+							<entry colname="4">
+								<p>Date of creation of the resource.</p>
+							</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">dct:​identifier</entry>
+							<entry colname="2">rdfs:​Literal</entry>
+							<entry colname="3">0..1</entry>
+							<entry colname="4">
+								<p>An unambiguous reference to the resource within a given context.</p>
+								<p>Recommended best practice is to identify the resource by means of a string conforming to a formal identification system.</p>
+							</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">dct:​modified</entry>
+							<entry colname="2">xsd:​date</entry>
+							<entry colname="3">0..1</entry>
+							<entry colname="4">
+								<p>Date of modification of the resource.</p>
+							</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">owl:​versionInfo</entry>
+							<entry colname="2">rdfs:​Literal</entry>
+							<entry colname="3">0..1</entry>
+							<entry colname="4">
+								<p>An owl:versionInfo statement generally has as its object a string giving information about this version. This statement does not contribute to the logical meaning of the resource.</p>
+							</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">euvoc:domain</entry>
 							<entry colname="2">skos:​Concept</entry>
 							<entry colname="3">0..1</entry>
-							<entry colname="4">Specify the context where a specified notation is considered unique. 
-</entry>
+							<entry colname="4">Indicates the subject of the controlled vocabulary. 
+This property has a similar function as the dct:subject and dcat:theme. </entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">dct:isPartOf</entry>
+							<entry colname="2">skos:​ConceptScheme</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4">A related resource in which the described resource is physically or logically included.</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">skosxl:prefLabel</entry>
+							<entry colname="2">skosxl:​Label</entry>
+							<entry colname="3">1..*</entry>
+							<entry colname="4">The preferred lexical label for a resource, in a given language. </entry>
 						</row>
 					</tbody>
 				</tgroup>
@@ -619,6 +612,13 @@ Broader concepts are typically rendered as parents in a concept hierarchy (tree)
 							<entry colname="4">
 								<p>The literal form of an skosxl:Label.  An instance of the class skosxl:Label has one and only one literal form. </p>
 							</entry>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">dct:type</entry>
+							<entry colname="2">skos:​Concept</entry>
+							<entry colname="3">0..1</entry>
+							<entry colname="4">Specify the context where a specified notation is considered unique. 
+</entry>
 						</row>
 					</tbody>
 				</tgroup>
